--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="styles.css">
      <title>Document</title>
      <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
-     <header></header>
+     <header>
+          <img src="" alt="">
+          <div>
+               <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+               <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+               <a href="">Conoce nuestros planes<span>i</span></a>
+          </div>
+     </header>
      <main>
           <section></section>
           <section></section>
