--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="styles.css">
+     <link rel="stylesheet" href="./styles.css">
      <title>Document</title>
      <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
      <header>
-          <img src="" alt="">
-          <div>
+          <img src="./assets/imgs/logo.svg" alt="">
+          <div class="header--title-container">
                <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
                <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-               <a href="">Conoce nuestros planes<span>i</span></a>
+               <a href="" class="header--button">Conoce nuestros planes <span></span></a>
           </div>
      </header>
      <main>
