--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </div>
      </header>
      <main>
-          <section class="main-exchange-container"></section>
+          <section class="main-exchange-container">
                <div class="backgroundImg"></div>
                <div class="main-exchange-container--title">
                     <h2>Visibilizamos todas las tasas de cambio.</h2>
@@ -78,8 +78,21 @@
                          </div>
                     </div>
                </section>
-               
-          <section></section>
+          </section>
+          <section class="main-product-detail">
+               <span></span>
+               <div class="product-detail--tittle">
+                    <h2>Creamos un producto sin comparación.</h2>
+                    <p>Confiable y diseñado para su uso diario.</p>
+               </div>
+               <section class="product-cards--container">
+                    <article class="product-detail--card">
+                         <span class="clock"></span>
+                         <p class="product--card-title">Tiempo real</p>
+                         <p class="product--card-body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                    </article>
+               </section>
+          </section>
           <section></section>
           <section></section>
      </main>
