--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
      <header>
-          <img src="./assets/imgs/logo.svg" alt="">
+          <img src="./assets/icons/batata.svg" alt="">
           <div class="header--title-container">
                <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
                <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
@@ -80,7 +80,7 @@
                </section>
           </section>
           <section class="main-product-detail">
-               <span></span>
+               <span class="product-detail--batata-logo"></span>
                <div class="product-detail--tittle">
                     <h2>Creamos un producto sin comparación.</h2>
                     <p>Confiable y diseñado para su uso diario.</p>
