--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="header--title-container">
                <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
                <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-               <a href="" class="header--button">Conoce nuestros planes <span></span></a>
+               <a href="#plans" class="header--button">Conoce nuestros planes <span></span></a>
           </div>
      </header>
      <main>
@@ -111,7 +111,44 @@
           <section class="bitcoin-img-container">
                <h2>Conócelo hoy.</h2>
           </section>
-          <section></section>
+          <section id="plans" class="main-plans-container">
+               <div class="plans--title">
+                    <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                    <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+               </div>
+               <setion class="plans-container--slider">
+                    <article class="plans-container--card">
+                         <p class="plan-card--title-top">Recomendado</p>
+                         <div class="plan-info-container">
+                              <h3 class="plan-card--title">Pago Anual</h3>
+                              <p class="plan-card--price"><span>$</span> 99</p>
+                              <p class="plan-card--saving">* Ahorras $129 comparado al plan mensual.</p>
+                              <button class="plan-card--ca">Escoger este <span></span></button>
+                         </div>
+                    </article>
+
+                    <article class="plans-container--card">
+                         <p class="plan-card--title-top">Básico</p>
+                         <div class="plan-info-container2">
+                              <h3 class="plan-card--title">Pago Mensual</h3>
+                              <p class="plan-card--price"><span>$</span> 19</p>
+                              <p class="plan-card--saving">* Plan básico aúnque con todas las ventajas.</p>
+                              <button class="plan-card--ca">Escoger este <span></span></button>
+                         </div>
+                    </article>
+
+                    <article class="plans-container--card">
+                         <p class="plan-card--title-top">Ilimitado</p>
+                         <div class="plan-info-container3">
+                              <h3 class="plan-card--title">Pago Único</h3>
+                              <p class="plan-card--price"><span class="unlimited">$</span> 199</p>
+                              <p class="plan-card--saving">* Exclusivo para los primeros 100 clientes con un precio especial.</p>
+                              <button class="plan-card--ca">Escoger este <span></span></button>
+                         </div>
+                    </article>
+
+               </setion>
+          </section>
      </main>
      <footer></footer>
 </body>
