--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                          <div class="plan-info-container3">
                               <h3 class="plan-card--title">Pago Único</h3>
                               <p class="plan-card--price"><span class="unlimited">$</span> 199</p>
-                              <p class="plan-card--saving">* Exclusivo para los primeros 100 clientes con un precio especial.</p>
+                              <p class="plan-card--saving">* Exclusivo para los primeros 100 clientes.</p>
                               <button class="plan-card--ca">Escoger este <span></span></button>
                          </div>
                     </article>
@@ -150,6 +150,17 @@
                </setion>
           </section>
      </main>
-     <footer></footer>
+     <footer>
+          <section class="left">
+               <ul>
+                    <li><a href="#">Linkedin</a></li>
+                    <li><a href="#">Crunchbase</a></li>
+                    <li><a href="#">Hackernews</a></li>
+               </ul>
+          </section>
+          <section class="right">
+               <img src="./assets/imgs/logo-footer.svg" alt="Logo de Batatabit 2022">
+          </section>
+     </footer>
 </body>
 </html>
